Only submit valid form

--- a/platforms/android/assets/www/templates/tab-dash.html
+++ b/platforms/android/assets/www/templates/tab-dash.html
@@ -2,25 +2,25 @@
   <ion-content class="padding">
     <p>Discover the day of the week</p>
 
-    <form ng-submit="dayOfWeek(weekDay)">
+    <form name="weekDayForm" ng-submit="weekDayForm.$valid && dayOfWeek(weekDay)" novalidate>
 		<div class="list">
 			<label>
 				Year:
 			</label>	
 			<label class="item item-input">
-				<input type="text" ng-model="weekDay.year">
+				<input type="date" ng-model="weekDay.year" required>
 			</label>
 			<label>
 				Month:
 			</label>	
 			<label class="item item-input">
-				<input type="text" ng-model="weekDay.month">
+				<input type="number" ng-model="weekDay.month" required min="1" max="12">
 			</label>
 			<label>
 				Day:
 			</label>	
 			<label class="item item-input">
-				<input type="text" ng-model="weekDay.day">
+				<input type="number" ng-model="weekDay.day" required min="1" max="31">
 			</label>
         </div>
         <div class="padding">
@@ -28,7 +28,7 @@
         </div>
 	</form>
 	<label class="item item-input">
-		<input type="text" ng-model="weekDay.week">
+		<input type="text" placeholder="Please inform the values above" ng-model="weekDay.week" readonly="true">
 	</label>
   </ion-content>
 </ion-view>
