--- a/platforms/android/assets/www/templates/tabs.html
+++ b/platforms/android/assets/www/templates/tabs.html
@@ -5,24 +5,14 @@
 -->
 <ion-tabs class="tabs-icon-top">
 
-
-  <!-- Dashboard Tab -->
+  <!-- Main Tab -->
   <ion-tab title="Home" icon="icon ion-home" href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
-
-  <!-- Friends Tab 
-  <ion-tab title="Like Us!" icon="icon ion-heart" href="#/tab/friends">
-    <ion-nav-view name="tab-friends"></ion-nav-view>
-  </ion-tab>
--->
-
-
-  <!-- Account Tab -->
+  <!-- Options Tab -->
   <ion-tab title="Options" icon="icon ion-gear-b" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
-
 
 </ion-tabs>
