--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget id="com.ionicframework.weekday971964" version="0.0.1" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
+<widget id="com.ionicframework.weekday971964" version="0.0.2" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
     <preference name="loglevel" value="DEBUG" />
     <preference name="AndroidLaunchMode" value="singleTop" />
     <feature name="App">
@@ -14,10 +14,10 @@
     </feature>
     <name>WeekDay</name>
     <description>
-        An Ionic Framework and Cordova project.
+        An Ionic Framework sample - Find out the day of the week
     </description>
-    <author email="hi@ionicframework" href="http://ionicframework.com/">
-      Ionic Framework Team
+    <author email="thiagoponte@gmail.com" href="http://thiagoponte.wordpress.com/">
+      Thiago Ponte
     </author>
     <content src="index.html" />
     <access origin="*" />
