Add an About page

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,5 +1,13 @@
-<ion-view title="Options">
+<ion-view title="About">
   <ion-content class="padding">
-    <h1>Options</h1>
+    <p>This app was built to understand how to create hybrid apps with the <a href="http://ionicframework.com/">Ionic Framework</a>.</p>
+    <p>Built by <a href="https://twitter.com/thiagoponte">@thiagoponte</a></p>
+    <p>To build the app the following resources were used:</p>
+    <ul>
+    	<li><a href="http://ionicframework.com/">Ionic Framework</a></li>
+    	<li><a href="https://cordova.apache.org/">Apache Cordova</a></li>
+    	<li><a href="https://angularjs.org/">Angular.js</a></li>
+    	<li><a href="https://github.com/ionic-in-action/ionic-demo-resort-app">ionic demo resort app</a></li> 
+    </ul>
   </ion-content>
 </ion-view>
