--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,7 +11,7 @@
   </ion-tab>
 
   <!-- Options Tab -->
-  <ion-tab title="Options" icon="icon ion-gear-b" href="#/tab/account">
+  <ion-tab title="About" icon="icon ion-android-information" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
